--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -9,16 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no">
 
-  <link rel="stylesheet" href="./assets/css/normalize.css">
+  <link rel="stylesheet" href="../assets/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="./assets/css/font.css">
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="../assets/css/font.css">
+  <link rel="stylesheet" href="../assets/css/main.css">
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
-  <script src="./assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116480014-1"></script>
@@ -67,12 +67,12 @@
 
   <div class="content">
     <nav>
-      <!-- <ul>
+      <ul>
         <li><a href="./index.html">home</a></li>
         <li><a href="./works.html" class="active">works</a></li>
         <li><a href="./about.html">about</a></li>
         <li><a href="./resume.html">resume</a></li>
-      </ul> -->
+      </ul>
     </nav>
 
     <div id="right-container">
@@ -84,7 +84,7 @@
         <div class="card-header" id="mobile-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#mobile-info" aria-expanded="false" aria-controls="mobile-info">Qiushichao Mobile</h2>
         </div>
-        <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#right-container" data-image="./images/mobile-banner.png">
+        <div id="mobile-info" class="collapse" aria-labelledby="mobile-title" data-parent="#right-container" data-image="../images/mobile-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Everyday calendar app designed for university students <br> to organize their academic calendar and find more club activities in leisure life <br> launched in 2016</p>
@@ -94,7 +94,7 @@
             <p>Qiushichao Team, Zhejiang University</p>
             <h3>_scope</h3>
             <p>User Research, Mobile App Interaction Design</p>
-            <a class="btn btn-primary" href="./mobile/" role="button"> Read More > </a>
+            <a class="btn btn-primary" href="../mobile/" role="button"> Read More > </a>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
         <div class="card-header" id="civicrm-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#civicrm-info" aria-expanded="false" aria-controls="civicrm-info">CiviCRM<sup>nz</sup></h2>
         </div>
-        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-container" data-image="./images/civicrm-banner.png">
+        <div id="civicrm-info" class="collapse" aria-labelledby="civicrm-title" data-parent="#right-container" data-image="../images/civicrm-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Consulting with Neutral Zone and reshaping experiences <br> of tracking members and programs in CiviCRM system</p>
@@ -113,7 +113,7 @@
             <p>Contextual Inquiry and Consulting Foundations, University of Michigan</p>
             <h3>_scope</h3>
             <p>User Research, Consulting</p>
-            <a class="btn btn-primary" href="./civicrm/" role="button"> Read More > </a>
+            <a class="btn btn-primary" href="../civicrm/" role="button"> Read More > </a>
           </div>
         </div>
       </div>
@@ -122,7 +122,7 @@
         <div class="card-header" id="smartpill-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
         </div>
-        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-container" data-image="./images/smartpill-banner.png">
+        <div id="smartpill-info" class="collapse" aria-labelledby="smartpill-title" data-parent="#right-container" data-image="../images/smartpill-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Pocket pharmacist app strategy design with martketing plan <br>for busy patients and chronic disease patients</p>
@@ -132,7 +132,7 @@
             <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
             <h3>_scope</h3>
             <p>Market Research, Business Process Design, Strategy, UI Design</p>
-            <a class="btn btn-primary" href="./smartpill/" role="button"> Read More > </a>
+            <a class="btn btn-primary" href="../smartpill/" role="button"> Read More > </a>
           </div>
         </div>
       </div>
@@ -141,7 +141,7 @@
         <div class="card-header" id="inforest-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inforest-info" aria-expanded="false" aria-controls="inforest-info">InForest Space</h2>
         </div>
-        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-container" data-image="./images/inforest-banner.png">
+        <div id="inforest-info" class="collapse" aria-labelledby="inforest-title" data-parent="#right-container" data-image="../images/inforest-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Interactive artifact and space design<br>to invoke dreams of forest in heavy city mist</p>
@@ -151,7 +151,7 @@
             <p>Student Research Training Program, Zhejiang University</p>
             <h3>_scope</h3>
             <p>Technology Research, Interaction Design, Architecture Design</p>
-            <a class="btn btn-primary" href="./inforest/" role="button"> Read More > </a>
+            <a class="btn btn-primary" href="../inforest/" role="button"> Read More > </a>
           </div>
         </div>
       </div>
@@ -160,7 +160,7 @@
         <div class="card-header" id="animal-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#animal-info" aria-expanded="false" aria-controls="animal-info">The Edge : Animal Shelter Design</h2>
         </div>
-        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-container" data-image="./images/edge-banner.png">
+        <div id="animal-info" class="collapse" aria-labelledby="animal-title" data-parent="#right-container" data-image="../images/edge-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>Start with a view of animals <br>make an shelter for us animals <br>all the way from fund to adoption </p>
@@ -170,7 +170,7 @@
             <p>Architecture Design, Zhejiang University</p>
             <h3>_scope</h3>
             <p>'Product' Research, Architecture Design</p>
-            <a class="btn btn-primary" href="./edge/" role="button"> Read More > </a>
+            <a class="btn btn-primary" href="../edge/" role="button"> Read More > </a>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
         <div class="card-header" id="inneref-title">
           <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
         </div>
-        <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#right-container" data-image="./images/blank-banner.png">
+        <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#right-container" data-image="../images/blank-banner.png">
           <div class="card-body">
             <h3>_intro</h3>
             <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
@@ -191,38 +191,6 @@
             <h3>_scope</h3>
             <p>User Research, Mobile App Interaction Design</p>
             <p class="upcoming">Upcoming Soon</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="card">
-        <div class="card-header" id="about-title">
-          <h2 tabindex="0" class="mb-0" data-toggle="collapse" data-target="#about-info" aria-expanded="false" aria-controls="about-info">Alejandro Wang</h2>
-        </div>
-        <div id="about-info" class="collapse" aria-labelledby="about-title" data-parent="#right-container" data-image="./images/about-banner.png">
-          <div class="card-body">
-            <h3>Before</h3>
-
-            <p>I was a <strong>coder</strong> at the beginning. I was an exploring <strong>architect</strong>. I like combination beauty between technology and design. Because once they being together, the mixing magic can make life easier and joyful. That’s
-              why I am now learning <strong>Human-Computer Interaction at University of Michigan</strong>.</p>
-
-            <p> I started a <strong>start-up</strong> focus on online education in China. The vision of my company Zhimou Tech Inc (the name means intelligence) was to help new coding learners to get on the right track and share ideas with the others by new
-              technology and enjoyable design. As one of the co-founder, I almost did everything - design, coding, networking, advertising, and management. I always want to expand myself with more skills and knowledge. But my focus is still design - the
-              only thing I urge to dig in forever.</p>
-            <h3>Now</h3>
-
-            <p>I am still exploring the world of coding and designing at the same time, especially the method of <strong>interaction design, user research, usability test, prototype and coding</strong> and more at school. By some small projects, I realize
-              my efforts can work out to help local community and organizations. I really enjoy my way of design - help people near me to solve their problems, then push it forward and broader. <strong>To be what’s next</strong>, is a hard thing to say.
-              Even though I realize changing the status quo sometimes hurts, and the ideas won’t come true immediately, to design for a better future never goes wrong.</p>
-
-            <h3>Next</h3>
-
-            <p><strong>Looking for an internship!</strong> Design for me is a curve line with points on it. Instead of drawing tons of points in random order or drawing one point at the time, going through the beautiful line is what I want to achieve.</p>
-            <p>
-              I'm graduating in <strong>April 2019</strong> and looking for open and fun people to work with in summer 2018!</p>
-            <a class="word-colored-orange" href="mailto:alejwang@umich.edu?subject=Hello">Say HI!</a>
-
           </div>
         </div>
       </div>
