--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,8 +57,8 @@
     <div id="sidenav-close">
       <i class="fas fa-arrow-left"></i>
     </div>
-    <ul>
-      <li><a href="./index.html" class="active">home</a></li>
+    <ul tabindex="-1">
+      <li><a tabindex="-1" href="./index.html" class="active">home</a></li>
       <li><a href="./works.html">works</a></li>
       <li><a href="./about.html">about</a></li>
       <li><a href="./resume.html">resume</a></li>
@@ -87,9 +87,9 @@
 
   <footer>
     <p>© Alejandro | Follow me </p>
-    <a href="https://www.instagram.com/alejwang/"> <i class="fab fa-instagram"></i></a>
-    <a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i></a>
+    <a href="https://www.instagram.com/alejwang/"><i class="fab fa-instagram"></i>&nbsp;</a>
+    <a href="https://www.github.com/alejwang"> <i class="fab fa-github"></i>&nbsp;</a>
+    <a href="https://www.linkedin.com/in/alejwang"> <i class="fab fa-linkedin-in"></i>&nbsp;</a>
   </footer>
 
   <!-- left down with decoration -->
